syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/type/date.proto";
package ruby_event_store.protobuf;

message HashMapStringValue {
  map<string, Value> fields = 1;
}

message Value {
  oneof kind {
    NullValue null_value = 1;
    double double_value = 2;
    int64 int_value = 3;
    string string_value = 4;
    bool bool_value = 5;

    google.type.Date date_value = 6;
    google.protobuf.Timestamp timestamp_value = 7;

    HashMapStringValue string_map_value = 20;
    ListValue list_value = 21;
  }
}

enum NullValue {
  NULL_VALUE = 0;
}

message ListValue {
  repeated Value values = 1;
}